--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ name = "py_artemis_rgb"
 version = "1.0.0"
 dependencies = [
   "aiohttp>=3.8.0",
+  "pydantic>=2.0,<3.0"
 ]
 authors = [
   { name="Etienne Coriou", email="etienne.coriou@free.fr" },
